FullQa New/src/FinancialForce ERP Core/objects/DataTransformation__c.object
<CustomObject>
    <customHelpPage>DataTransformationHelp</customHelpPage>
    <description>A target value in a Data Transformation Table. Contains criteria to meet, as well as a target value when met.</description>
    <fields>
        <fullName>DataTransformationTable__c</fullName>
        <label>Data Transformation Table</label>
        <referenceTo>DataTransformationTable__c</referenceTo>
        <relationshipName>DataTransformationRows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequiredSourceValues__c</fullName>
        <formula>IF( NOT(ISBLANK(SourceValue2__c)) , 2, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Source Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceValue1__c</fullName>
        <label>Source Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceValue2__c</fullName>
        <label>Source Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetValue__c</fullName>
        <description>Value to return if the associated Data Table Criteria are met.</description>
        <inlineHelpText>Value to return if the associated Data Table Criteria are met.</inlineHelpText>
        <label>Target Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniquenessConstraint__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Data Transformation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TargetValue__c</columns>
        <columns>DataTransformationTable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DT-{000000}</displayFormat>
        <label>Data Transformation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Transformations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>